--- a/extract_docx_comments.ipynb
+++ b/extract_docx_comments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtOdRr7M3CztWTHX92AhVx",
+      "authorship_tag": "ABX9TyOv+6SsIFbxkVuzeem5jhk3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,10 +77,10 @@
         "        comment_text = ''.join([node.xpath('string(.)') for node in et.iter() if (node is comment_start or node is comment_end) or (node.getparent() is comment_start.getparent() and node.getnext() is comment_end)])\n",
         "        \n",
         "        # Add the comment data to a list\n",
-        "        comment_data.append({'Kommenteeritud tekst': comment_text, 'Kommentaar': text, 'Autor': author, 'Kuupäev': date})\n",
+        "        comment_data.append({'Comment ID': comment_id, 'Commented Text': comment_text, 'Comment': text, 'Author': author, 'Date': date})\n",
         "    \n",
         "    # Create a Pandas DataFrame from the comment data and return it\n",
-        "    df = pd.DataFrame(comment_data, columns=['Kommenteeritud tekst', 'Kommentaar', 'Autor', 'Kuupäev'])\n",
+        "    df = pd.DataFrame(comment_data, columns=['Comment ID', 'Commented Text', 'Comment', 'Author', 'Date'])\n",
         "    return df\n",
         "\n",
         "\n",
@@ -100,12 +100,12 @@
         "            workbook = writer.book\n",
         "            worksheet = writer.sheets['Comments']\n",
         "            date_format = workbook.add_format({'num_format': 'dd/mm/yyyy hh:mm:ss'})\n",
-        "            worksheet.set_column('C:C', None, date_format)\n",
+        "            worksheet.set_column('E:E', None, date_format)\n",
         "\n",
         "        print(f\"Comments saved to '{output_file}'\")\n",
         "\n",
         "        # Download the generated Excel file\n",
-        "        files.download(output_file)"
+        "        files.download(output_file)\n"
       ]
     },
     {
